fixed icons section centre alignment

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -480,10 +480,7 @@ h1 {
 	width: 50%;
 }
 
-/* latest exhibitions */
-/* .latest {
-	clear: both;
-} */
+/* latest exhibitions section */
 
 .latest h2 {
 	text-align: center;
@@ -500,17 +497,18 @@ h1 {
 	margin-right: 0;
 }
 
-/* icons */
+/* icons section */
 
-
-.icons li {
-	float: left;
-	width: calc((100% / 3) - 60px);
-	margin-right: 30px;
+.icons {
 	text-align: center;
 }
+.icons li {
+	float: left;
+	width: calc((100% - 60px) / 3);
+	margin-right: 30px;
+}
 
-.icons li:nth-of-type(3n) {
+.icons li:last-of-type {
 	margin-right: 0px;
 }
 
